# otter_sat

./: .gitattributes  .gitignore  Cargo.toml  README.md
otter_cli/: Cargo.toml  readme.md
otter_cli/src/: config_io.rs  listener.rs  main.rs  misc.rs  window.rs
otter_cli/src/parse/: cli.rs  config.rs  config_io.rs  mod.rs
otter_cli/src/records/: core.rs  frat.rs  mod.rs  window.rs
otter_lib/: Cargo.toml
otter_lib/examples/: all_models.rs  direct_construction.rs  unsat_core.rs  virtual_DIMACS.rs
otter_lib/src/: builder.rs  context.rs  frat.rs  lib.rs  log.rs
otter_lib/src/assistants/: mod.rs  resolution_buffer.rs
otter_lib/src/config/: context.rs  dbs.rs  defaults.rs  misc.rs  mod.rs  vsids.rs
otter_lib/src/context/: builder.rs  consequence_q.rs  core.rs  counters.rs  generic.rs  mod.rs  preprocessing.rs  reports.rs  resolution_buffer.rs  solve.rs  unique_id.rs
otter_lib/src/db/: consequence_q.rs  keys.rs  mod.rs
otter_lib/src/db/atom/: activity.rs  mod.rs  valuation.rs  watch_db.rs
otter_lib/src/db/atom/valuation/: context.rs  mod.rs
otter_lib/src/db/clause/: activity_glue.rs  keys.rs  mod.rs  stored.rs  transfer.rs
otter_lib/src/db/clause/db_clause/: mod.rs  subsumption.rs  watches.rs
otter_lib/src/db/literal/: details.rs  level.rs  mod.rs  store.rs
otter_lib/src/db/variable/: activity.rs  internal.rs  mod.rs  watch_db.rs
otter_lib/src/db/variable/valuation/: context.rs  mod.rs
otter_lib/src/dispatch/: core.rs  frat.rs  macros.rs  mod.rs  receivers.rs  transmitters.rs
otter_lib/src/dispatch/frat/: mod.rs  transcriber.rs
otter_lib/src/generic/: heap.rs  index_heap.rs  luby.rs  minimal_pcg.rs  mod.rs
otter_lib/src/io/: files.rs  mod.rs  receivers.rs
otter_lib/src/misc/: activity_glue.rs  log.rs  mod.rs  random.rs
otter_lib/src/procedures/: analysis.rs  apply_consequences.rs  backjump.rs  bcp.rs  choice.rs  mod.rs  preprocessing.rs  solve.rs
otter_lib/src/procedures/preprocessing/: mod.rs  pure.rs
otter_lib/src/structures/: atom.rs  mod.rs  valuation.rs  variable.rs
otter_lib/src/structures/clause/: kind.rs  literal.rs  literal_slice.rs  literal_slice_deref_impl.rs  mod.rs  stored.rs
otter_lib/src/structures/literal/: details.rs  impl_abLiteral.rs  literal_struct.rs  mod.rs
otter_lib/src/structures/valuation/: mod.rs  slice_impl.rs
otter_lib/src/structures/variable/: BCP.rs  mod.rs  variable_impl.rs
otter_lib/src/transient/: resolution_buffer.rs
otter_lib/src/types/: clause.rs  err.rs  errs.rs  gen.rs  mod.rs
otter_sat/: Cargo.toml  cbindgen.toml  readme.md
otter_sat/examples/: all_models.rs  assumptions.rs  callback_addition.rs  core.rs  default.rs  direct_construction.rs  ipasir_addition.rs  nonograms.rs  sudoku.rs  unsat_core.rs  virtual_DIMACS.rs
otter_sat/src/: builder.rs  ipasir.rs  lib.rs
otter_sat/src/atom_cells/: cell.rs  config.rs  methods.rs  mod.rs  resolution.rs  valuation.rs
otter_sat/src/builder/: dimacs.rs  mod.rs  preprocess.rs  structures.rs
otter_sat/src/cli/: config.rs  frat.rs  main.rs  misc.rs  parse_args.rs  read.rs
otter_sat/src/config/: activity.rs  config_option.rs  dbs.rs  lbd.rs  minimization_criteria.rs  mod.rs  rng.rs  scheduler.rs  stopping_criteria.rs  strenthening_criteria.rs  switches.rs  vsids.rs
otter_sat/src/context/: callbacks.rs  counters.rs  generic.rs  mod.rs  specific.rs
otter_sat/src/context/callbacks/: mod.rs
otter_sat/src/db/: activity.rs  consequence_q.rs  keys.rs  mod.rs  trail.rs  watches.rs
otter_sat/src/db/atom/: activity.rs  mod.rs  valuation.rs  watch_db.rs
otter_sat/src/db/clause/: activity_glue.rs  callbacks.rs  get.rs  iterators.rs  mod.rs  store.rs  transfer.rs
otter_sat/src/db/clause/db_clause/: mod.rs  subsumption.rs  watches.rs
otter_sat/src/db/literal/: ad_level.rs  config.rs  decision_level.rs  level.rs  mod.rs
otter_sat/src/db/watches/: mod.rs  watch_db.rs
otter_sat/src/dispatch/: core.rs  macros.rs  mod.rs
otter_sat/src/dispatch/frat/: mod.rs  transcriber.rs
otter_sat/src/generic/: index_heap.rs  luby.rs  minimal_pcg.rs  mod.rs
otter_sat/src/generic/random/: minimal_pcg.rs  minisat.rs  mod.rs
otter_sat/src/ipasir/: callbacks.rs  context_bundle.rs  ipasir_one.rs  ipasir_two.rs  mod.rs
otter_sat/src/misc/: log.rs  mod.rs
otter_sat/src/preprocessing/: mod.rs  pure.rs
otter_sat/src/procedures/: analysis.rs  apply_consequences.rs  assumptions.rs  backjump.rs  bcp.rs  conflict.rs  core.rs  decision.rs  mod.rs  refresh.rs  schedulers.rs  solve.rs
otter_sat/src/reports/: mod.rs
otter_sat/src/reports/frat/: callback_templates.rs  mod.rs  transcriber.rs
otter_sat/src/resolution_buffer/: cell.rs  config.rs  methods.rs  mod.rs  resolution_buffer.rs  valuation.rs
otter_sat/src/structures/: atom.rs  consequence.rs  mod.rs
otter_sat/src/structures/clause/: ab_clause.rs  db_clause.rs  i_clause.rs  int_clause.rs  kind.rs  literal.rs  literal_slice.rs  mod.rs  source.rs  v_clause.rs
otter_sat/src/structures/literal/: ab_from.rs  ab_literal.rs  i_literal.rs  impl_abLiteral.rs  int_literal.rs  mod.rs
otter_sat/src/structures/valuation/: mod.rs  slice_impl.rs  status.rs
otter_sat/src/transient/: config.rs  mod.rs  resolution_buffer.rs
otter_sat/src/types/: err.rs  gen.rs  mod.rs
otter_sat/tests/: assumptions.rs  basic.rs  cores.rs  levels.rs
otter_tests/: Cargo.toml
otter_tests/src/: lib.rs
otter_tests/src/frat/: mod.rs
otter_tests/tests/: basic.rs  basic_assumptions.rs  frat.rs  frat_checker.rs  graph_colouring.rs  lran.rs  parity.rs  phole.rs  planning.rs  quasigroup.rs  tests.rs  uniform_random.rs  various.rs
otter_tests/tests/satlib/: dimacs.rs  misc.rs  mod.rs  uniform_random.rs
otter_tests_plus/ipasir_api/: CMakeLists.txt  backbone_minisat.py  compare_minisat.py  conflict.py  essentials_minisat.py  iterative.py  longest_simple_path_minisat.py  portfolio_minisat.py  reachability_minisat.py  satunsat.py  satunt.py  setup.py  test_backbone.py  test_conflict.py  test_essentials.py  test_iterative.py  test_longest_simple_path.py  test_portfolio.py  test_reachability.py  test_satunsat.py  utils.py
(+7666 files in other folders)
