[package]
name = "otter_sat"
version = "0.1.0"
edition = "2021"

[lib]
name = "otter_lib"
path = "src/otter_lib/lib.rs"

[[bin]]
name = "otter_sat"
edition = "2021"

[features]
jemalloc = [ "dep:tikv-jemallocator" ]
log = [ "dep:log4rs" ]

[dependencies]
clap = { version = "4.5.15" }
crossterm = "0.28.1"

rand = { version = "0.8.5" }

log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_off"] }
log4rs = { version = "1.3.0", optional = true }
rand_xoshiro = "0.6.0"
xz2 = "0.1.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[profile.profiling]
codegen-units = 1
debug = true
inherits = "release"
lto = true

[profile.redline]
codegen-units = 1
debug = false
inherits = "release"
lto = true
panic = "abort"
