[workspace]
resolver = "2"
members = [
   "otter_sat",
   "otter_tests",
]

[profile.release]
codegen-units = 1
debug = false
lto = "fat"


[profile.log]
codegen-units = 1
debug = true
inherits = "dev"
lto = "fat"


[profile.profiling]
inherits = "release"
lto = "fat"

[profile.redline]
codegen-units = 1
inherits = "release"
panic = "abort"
