[workspace]
resolver = "2"
members = [
   "otter_sat",
   "otter_tests",
]

[profile.release]
codegen-units = 1
debug = false
lto = false


[profile.log]
codegen-units = 1
debug = true
inherits = "dev"


[profile.profiling]
inherits = "release"

[profile.redline]
codegen-units = 1
inherits = "release"
panic = "abort"
