[package]
name = "otter_cli"
version = "0.1.0"
edition = "2021"

[features]
jemalloc = [ "dep:tikv-jemallocator" ]
log = [ "dep:log4rs" ]

[dependencies]
otter_lib = { path = "../otter_lib" }

clap = { version = "4.5.15" }
crossbeam = "0.8.4"
crossterm = "0.28.1"

log4rs = { version = "1.3.0", optional = true }
xz2 = "0.1.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
