[package]
name = "otter_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "otter_lib"
path = "src/lib.rs"

[dependencies]

crossbeam = "0.8.4"

log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_off"] }

rand = { version = "0.8.5" }
rand_xoshiro = "0.6.0"
xz2 = "0.1.7"
