[package]
name = "otter_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "otter_lib"
path = "src/lib.rs"

[dependencies]

log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_off"] }

rand = { version = "0.8.5", default-features = false }
rand_core = "0.6.4"

[dev-dependencies]
crossbeam = "0.8.4"
