[package]
name = "otter_sat"
version = "0.1.0"
edition = "2021"
license = "GNU Affero General Public License (AGPL) Version 3"
homepage = "https://github.com/teeaychem/otter_sat"
repository = "https://github.com/teeaychem/otter_sat.git"
categories = ["science", "mathematics"]
keywords = ["sat"]
description = "A library for determining the satisfiability of boolean formulas written in conjunctive normal form, developed to support investigation into solvers by researchers, developers, or anyone curious."
documentation = "https://docs.rs/otter_sat/"

[lib]
name = "otter_sat"
path = "src/lib.rs"

[dependencies]

log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_off"] }

rand = { version = "0.8.5", default-features = false }
rand_core = "0.6.4"

[dev-dependencies]
crossbeam = "0.8.4"
