[package]
authors = ["teeaychem <bsparkes@alumni.stanford.edu>"]
categories = ["science", "mathematics"]
description = "A library for determining the satisfiability of boolean formulas written in conjunctive normal form, developed to support investigation into solvers by researchers, developers, or anyone curious."
documentation = "https://docs.rs/otter_sat/"
edition = "2021"
homepage = "https://github.com/teeaychem/otter_sat"
keywords = ["sat", "satisfiability", "logic"]
license = "AGPL-3.0-or-later"
name = "otter_sat"
readme = "readme.md"
repository = "https://github.com/teeaychem/otter_sat.git"
version = "0.0.10"

[lib]
name = "otter_sat"
path = "src/lib.rs"

[features]
boolean = [] # Use 'boolean' literals --- (Atom, Polarity) pairs, as opposed to integers.
xz = ["dep:xz2"] # Enable loading xz compressed cnf file through the cli.

[dependencies]
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_off"] }

rand = { version = "0.8.5", default-features = false }
rand_core = "0.6.4"

xz2 = { version = "0.1.7", default-features = false, optional = true }

[[bin]]
name = "otter_cli"
path = "src/cli/main.rs"
