[package]
name = "otter_tests"
version = "0.1.0"
edition = "2021"

[features]
log = [ "dep:env_logger", "dep:log" ]


[dependencies]
otter_sat = { path = "../otter_sat" }

log = { version = "0.4.22", features = ["max_level_trace"], optional = true }
env_logger = { version = "0.11.5", optional = true }

glob = "0.3.1"
xz2 = "0.1.7"
